# Spike-Simulator

./: CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_windows.bat
examples/: Module Template.cppm
interfaces/: color_sensor.pyi  hub.pyi  meta.pyi  motor.pyi  mymodule.pyi
src/: Application.cpp  Application.cppm  EntryPoint.cppm  PythonInteropTest.cpp  Test_Module.cppm  main.cpp
src/renderer/: Renderer.cpp  Renderer.cppm
src/robot/: Motor.cppm  Port.cppm  RobotBase.cppm  SensorBase.cppm
src/simulation_core/: Simulation.cpp  Simulation.cppm
src/window/: Window.cpp  Window.cppm
test_scripts/: Test.py
